# north-cloud

./: .cursorignore  .dockerignore  .env.example  .gitignore  .golangci.yml  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  DOCKER_OPTIMIZATION_SUMMARY.md  README.md  TODO.md  Taskfile.yml  build-images.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  go.work  go.work.sum  lefthook.yml
.claude/: mcp.json  settings.json
.claude-plugin/: marketplace.json
.cursor/: hooks.json  mcp.json  mcp.json.example
.github/: CODEOWNERS  pull_request_template.md
.kittify/: config.yaml  metadata.yaml
ai-observer/: .layers  CLAUDE.md  Dockerfile  Taskfile.yml  config.yml.example  go.mod  go.sum  main.go
alert-crawler/: .layers  CLAUDE.md  Dockerfile  Taskfile.yml  config.yml  go.mod  go.sum  main.go  main_test.go
auth/: .air.toml  .golangci.yml  .layers  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  config.yml  config.yml.example  go.mod  go.sum  main.go
classifier/: .gitignore  .layers  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  Taskfile.yml  config.yml.example  go.mod  go.sum  main.go  (+1 more)
ml-framework/: README.md  pyproject.toml
ml-framework/docker/: Dockerfile.ml-sidecar
ml-framework/nc_ml/: app.py  health.py  logging.py  main.py  metrics.py  middleware.py  model_loader.py  module.py  schemas.py
ml-framework/tests/: test_app.py  test_health.py  test_logging.py  test_metrics.py  test_middleware.py  test_model_loader.py  test_module.py  test_schemas.py
(+2913 files in other folders)
