[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nc-ml"
version = "1.0.0"
description = "North Cloud ML Sidecar Framework"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "joblib>=1.4.0",
    "asgi-lifespan>=2.1.0",
]
ml = [
    "joblib>=1.4.0",
    "scikit-learn>=1.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
